added back faster vm options